연산자, container, 조건_반복 복습

--- a/03-Python/03_container.ipynb
+++ b/03-Python/03_container.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "078953a3",
    "metadata": {},
    "outputs": [
@@ -232,10 +232,10 @@
        " 'age': '20',\n",
        " 'is_hungry': False,\n",
        " 'height': 190,\n",
-       " 'skills': ['n8n', 'sql', 'python']}"
+       " 'skills': ['n8n', 'sql', 'python', 'Git']}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,8 +244,140 @@
     "# 변경\n",
     "me['name'] = '김새싹'\n",
     "me['is_hungry'] = False\n",
-    "\n",
+    "me['skills'].append('Git')\n",
     "me"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7179c120",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': '김새싹', 'age': '20', 'is_hungry': False, 'height': 190, 'skills': ['n8n', 'sql', 'python', 'Git'], 'money': 10000}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "190"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# K-V 추가\n",
+    "me['money'] = 10000\n",
+    "print(me)\n",
+    "\n",
+    "# K-V 삭제\n",
+    "me.pop('height')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe4c8b0f",
+   "metadata": {},
+   "source": [
+    "# Set (집합)\n",
+    "* 중복되는 요소가 없다.\n",
+    "* 순서(index)가 없다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1cac1869",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "{3}\n",
+      "{1, 2}\n",
+      "[1, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 34, 4, 4, 4, 4, 44, 5, 5, 6]\n",
+      "{1, 2, 3, 34, 4, 5, 6, 44}\n",
+      "[1, 2, 3, 34, 4, 5, 6, 44]\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = {1,2,1,2,1,2,3}\n",
+    "s2 = {3,4,5}\n",
+    "s1, s2\n",
+    "\n",
+    "# 합집합\n",
+    "print(s1 | s2)\n",
+    "# 교집합\n",
+    "print(s1 & s2)\n",
+    "# 차집합\n",
+    "print(s1 - s2)\n",
+    "\n",
+    "# 바꿔서 편하게 쓰기 가능\n",
+    "list(s1)\n",
+    "\n",
+    "# 중복이 많은 리스트에서 중복을 제거하는 용도 많이 쓰임\n",
+    "ll = [1,1,1,1,1,1,1,2,2,2,2,2,2,2,3,3,34,4,4,4,4,44,5,5,6]\n",
+    "print(ll)\n",
+    "ss = set(ll) # 순서는 없다\n",
+    "print(ss)\n",
+    "ll = list(ss) #리스트로 바뀌었을 때는 순서를 바꿀 수 있다\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb07d291",
+   "metadata": {},
+   "source": [
+    "# Tuple(튜플)\n",
+    "\n",
+    "- 리스트 친척\n",
+    "- 순서(index)가 있음\n",
+    "- 리스트와 차이: 수정 불가능\n",
+    "- 직접 쓰기보단 python 내부에서 많이 쓰임"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "efbbe688",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, 30) 50 (10, 20, 30, 40, 50)\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = (10, 20, 30, 40, 50)\n",
+    "\n",
+    "print(t[0:3], t[-1], t[:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5755806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 수정 불가능\n",
+    "# t[0] = 100\n",
+    "# t.append()\n",
+    "# t.pop()"
    ]
   }
  ],
