--- a/03-Python/05_함수.ipynb
+++ b/03-Python/05_함수.ipynb
@@ -200,8 +200,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "2971c56c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('No', 26.1) ('No', 23.4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# BMI 기준으로, 비만여부 확인해주는 함수 (체중/키(m)^2)\n",
+    "# 남성 27 이상일 경우 비만\n",
+    "# 여성 25 이상일 경우 비만\n",
+    "weight = float(0)\n",
+    "height = float(0)\n",
+    "\n",
+    "def check_bmi(weight, height, gender):\n",
+    "    bmi = weight/(height)**2\n",
+    "    if bmi >= 27 and gender == 'M':\n",
+    "        return 'Yes'\n",
+    "    elif bmi >= 25 and gender == 'F':\n",
+    "        return 'Yes'\n",
+    "    return 'No', round(bmi,1)\n",
+    "\n",
+    "\n",
+    "print(check_bmi(80.0, 1.75, 'M'), check_bmi(60.0, 1.6, 'F'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7141708",
    "metadata": {},
    "outputs": [],
    "source": []
