--- a/03-Python/lotto.ipynb
+++ b/03-Python/lotto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b74320a6",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "790b3d94",
    "metadata": {},
    "outputs": [],
@@ -28,17 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "64037e5c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1210"
+       "1212"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
     "d['c']\n",
     "\n",
     "# 있으면 가져오고, 없으면 None\n",
-    "d.get('c')"
+    "d.get('c')\n"
    ]
   },
   {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "024a88f7",
    "metadata": {},
    "outputs": [],
@@ -116,18 +116,184 @@
     "# my_number = [1, 7, 9, 17, 27, 31]  # 2등\n",
     "# my_number = [1, 7, 9, 17, 27, 45]  # 3등\n",
     "\n",
-    "# 등수 체커"
+    "# 등수 체커\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "afd76dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 7, 9, 17, 27, 38] 31\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(balls, bonus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "8bcbd687",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "URL = 'https://www.dhlottery.co.kr/lt645/selectPstLt645Info.do'\n",
+    "res = requests.get(URL).json()\n",
+    "item = res['data']['list'][0]\n",
+    "keys = [\"tm1WnNo\", \"tm2WnNo\", \"tm3WnNo\", \"tm4WnNo\", \"tm5WnNo\", \"tm6WnNo\"]\n",
+    "\n",
+    "real_numbers = []\n",
+    "for k in keys:\n",
+    "    real_numbers.append(item[k])\n",
+    "bonus = item['bnsWnNo']\n",
+    "\n",
+    "def lotto_checker(my_numbers):\n",
+    "\n",
+    "    s1 = set(real_numbers)\n",
+    "    s2 = set(my_numbers)\n",
+    "    match_count = len(s1 & s2)\n",
+    "\n",
+    "    result = 0\n",
+    "    if match_count == 6:  \n",
+    "        result = 1\n",
+    "    elif (match_count == 5) and (bonus in my_numbers): \n",
+    "        result = 2\n",
+    "    elif match_count == 5:\n",
+    "        result = 3\n",
+    "    elif match_count == 4:\n",
+    "        result = 4\n",
+    "    elif match_count == 3:\n",
+    "        result = 5\n",
+    "\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3c914c4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 32, 14, 40, 16, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "my_number = random.sample(range(1,46),6)\n",
+    "lotto_checker([5, 8, 25, 31, 41, 45])\n",
+    "\n",
+    "print(my_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9423f985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 976, 1: 0, 2: 0, 3: 0, 4: 0, 5: 24}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = {\n",
+    "    0: 0,\n",
+    "    1: 0,\n",
+    "    2: 0,\n",
+    "    3: 0,\n",
+    "    4: 0,\n",
+    "    5: 0\n",
+    "}\n",
+    "\n",
+    "for _ in range(1000):\n",
+    "    my_numbers = random.sample(range(1, 46), 6)\n",
+    "    rank = lotto_checker(my_numbers) # 0~5 중에 하나의 숫자(등수)\n",
+    "    result[rank] += 1 #wow point\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e3ac20e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 19885356, 1: 1, 2: 8, 3: 538, 4: 28088, 5: 457032}\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = {\n",
+    "    0: 0,\n",
+    "    1: 0,\n",
+    "    2: 0,\n",
+    "    3: 0,\n",
+    "    4: 0,\n",
+    "    5: 0\n",
+    "}\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    my_numbers = random.sample(range(1, 46), 6)\n",
+    "    rank = lotto_checker(my_numbers) # 0~5 중에 하나의 숫자(등수)\n",
+    "    result[rank] += 1 #wow point\n",
+    "    if rank ==1:\n",
+    "        break\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b7b30506",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20371023"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(result.values())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcbd687",
+   "id": "d08a0213",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def my_number()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
